Adding the nodejs command so it runs /home/hello-world/app.js on startup and altered the ports according to the QuickStart guide.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       restart_policy:
         condition: on-failure
     ports:
-      - "80:80"
+      - "8080:3000"
+    command: /usr/bin/nodejs /home/hello-world/app.js
     networks:
-      - webnet
+      - webnet 
 networks:
   webnet:
