--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,20 @@ services:
       restart_policy:
         condition: on-failure
     ports:
-      - "8080:3000"
+      - "80:3000"
     command: /usr/bin/nodejs /home/hello-world/app.js
     networks:
       - webnet 
+  visualizer:
+    image: dockersamples/visualizer:stable
+    ports:
+      - "8080:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+    networks:
+      - webnet
 networks:
   webnet:
